# musicbrainz.rs

./: .gitattributes  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
crate/: Cargo.toml
crate/src/: album.rs  artist.rs  enums.rs  lib.rs  release_group.rs
examples/: app.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/str/: trait.FromStr.js
implementors/musicbrainz/traits/: trait.Entity.js
implementors/std/error/: trait.Error.js
musicbrainz/: MusicBrainz.t.html  index.html  sidebar-items.js  struct.MusicBrainz.html  struct.Uuid.html
musicbrainz/artist/: index.html  struct.Artist.html
musicbrainz/enums/: AlbumType.t.html  PersonType.t.html  enum.AlbumType.html  enum.PersonType.html  index.html  sidebar-items.js
musicbrainz/error/: enum.Error.html  index.html
musicbrainz/release_group/: ReleaseGroup.t.html  index.html  sidebar-items.js  struct.ReleaseGroup.html
musicbrainz/traits/: index.html  sidebar-items.js  trait.Entity.html
src/: artist.rs  enums.rs  error.rs  lib.rs  main.rs  release_group.rs  traits.rs
src/musicbrainz/: artist.rs.html  enums.rs.html  error.rs.html  lib.rs.html  release_group.rs.html  traits.rs.html
tests/: lib.rs
